--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 section {
     height: 500px;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
     /* border: 2px solid red; */
 }
 
@@ -36,11 +36,11 @@ section {
 
 
 
-/* .section2 {
+.section2 {
     background-image: url("images/biography-bg.png");
     background-repeat: no-repeat;
-    background-image:;
-} */
+    
+}
 
 .biography {
     display: flex;
@@ -49,10 +49,11 @@ section {
     width: 800px;
     height: 600px;
     float: right;
-    margin-right: 1600px;
+    margin-right: 0px;
 }
 .biography-article {
     margin-top: 20px;
+    margin-right: 70px;
 }
 
 
@@ -82,8 +83,8 @@ section {
     height: 400px;
     /* background-color: bisque; */
     /* border: 2px solid green; */
-    margin: 100px;
-    padding: 30px;
+    margin: 0px;
+    padding: 10px;
     box-shadow: 10px 10px 5px rgb(78, 78, 78);
 }
 
@@ -106,10 +107,10 @@ section {
     background-color: indianred;
     text-align: center;
     position: relative;
-    width: 700px;
+    width: 500px;
     padding: 10px;
-    margin-left: 38%;
-    margin-right: 38%;
+    margin-left: 25%;
+    margin-right: 25%;
     box-shadow: 10px 10px 5px;
 }
 
