--- a/style.css
+++ b/style.css
@@ -69,12 +69,13 @@ section {
     display: inline-flex;
 }
 .work-h2 {
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     align-content: center;
     background-color: blanchedalmond;
-    height: 150px;
+    height: 100px;
     box-shadow: 10px 10px 5px rgb(95, 95, 95);
+    padding: 10px;
     
     
 }
@@ -85,7 +86,7 @@ section {
 }
 .box-img {
     width: 100%;
-    height: 300px;
+    height: 289px;
     /* background-color: bisque; */
     /* border: 2px solid green; */
     margin: 5px;
